2004-11-08 Alain Magloire
	Implement new Interface ICDIFunctionFinished.
	It returns the return value of the function.
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/FunctionFinished.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/event/SuspendedEvent.java
	* mi/org/eclipse/cdt/debug/mi/core/event/MIFuncitonFinishedEvent.java

2004-11-07 Alain Magloire
	Support for MIInterpreterExec

2004-11-03 Alain Magloire
	Partial fix for 77435
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/VariableManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/VariableDescriptor.java

2004-11-02 Alain Magloire
	Refactor ICDIConfiguratio --> ICDISessionConfiguration and ICDITargetConfiguration
	* cdi/org/eclipse/cdt/debug/core/cdi/Session.java
	* cdi/org/eclipse/cdt/debug/core/cdi/SessionConfiguration.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/Target.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/TargetConfiguration.java

2004-11-02 Alain Magloire
	Tentative fix for PR 77435
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/VariableManager.java

2004-10-31 Alain Magloire
	Tentative fix for PR 74496

2004-10-31 Alain Magloire
	Refactor ICDIVariableObject --> ICDIVariableDescriptor
	Refactor ICDIArgumentObject --> ICDIArgumentDescriptor
	Refactor ICDIRegisterObject --> ICDIRegisterDescriptor
	Addition ICDIThreadStorageDescriptor, ICDIThreadStorage
	Addition ICDILocalVariableDescriptor, ICDILocalVariable
	Addition ICDIGlobalVariableDescriptor, ICDIGlovalVariable

	Adjust the classes to the changes.

2004-10-29 Alain Magloire
	Remove of ICDISharedLibraryManager
	* cdi/org/eclipse/cdt/debug/core/cdi/Session.java
	* cdi/org/eclipse/cdt/debug/core/cdi/SharedLibraryManager.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/Target.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/SharedLibraryManagement.java

	* src/org/eclipse/cdt/debug/mi/core/GDBCDIDebugger.java
	* src/org/eclipse/cdt/debug/mi/core/GDBServerCDIDebugger.java

2004-10-28 Alain Magloire